Fixed cart layout on mobile version

--- a/css/components.css
+++ b/css/components.css
@@ -758,7 +758,7 @@ footer {
 
 .quantity-display {
   min-height: 2.5rem;
-  min-width: 4rem;
+  min-width: 3rem;
   text-align: center;
   border-left: 2px solid var(--color-button-border);
   border-right: 2px solid var(--color-button-border);
@@ -817,8 +817,7 @@ footer {
 .cart {
   width: 100%;
   border-collapse: collapse;
-  table-layout: fixed;
-  margin: 1.5rem 0 1.5rem 0;
+
 }
 
 .cart th {
@@ -838,9 +837,6 @@ footer {
   vertical-align: middle;
 }
 
-.cart-product { width: 70%; }
-.cart-details { width: 30%; }
-
 /* Cart Item Box */
 .cart-prod-box {
   display: flex;
@@ -848,7 +844,8 @@ footer {
 }
 
 .cart-prod-box img {
-  width: 10rem;
+  width: 8rem;
+  height: auto;
   border-radius: 0.5rem;
   object-fit: cover; /* avoid image being scratched */
 }
@@ -871,7 +868,7 @@ footer {
 
 /* Coupon Input */
 .coupon input {
-  min-width: 15rem;
+  min-width: 12rem;
   border: 1px solid var(--color-button-border);
   border-radius: 0.5rem;
   padding: 0.75rem;
