--- a/css/layout.css
+++ b/css/layout.css
@@ -461,3 +461,12 @@ footer {
   }
 }
 
+.cart {
+  margin: 1.5rem 0 1.5rem 0;
+}
+
+@media (max-width: 768px) {
+  .cart {
+    overflow-x: auto;
+  }
+}
